--- a/contacts.html
+++ b/contacts.html
@@ -20,8 +20,8 @@
             <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
         <div id="cts">
-            <h1>CONTACT US</h1>
-            <h1>OR NOT</h1>
+            <br>
+            <h1>Contacts</h1>
             <label>Name:</label> <p id="cont">Anton</p><br>
             <label>Surname:</label> <p id="cont">Grigorievich</p><br>
             <label>Telephone:</label> <p id="cont">+23038534953</p><br>
