--- a/home.html
+++ b/home.html
@@ -15,7 +15,8 @@
         <div class="main-image-frame">
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
-        <h1>Home Page</h1>
+        <br>
+        <h1>Dentist Event</h1>
         <button id="register2">Register</button>
         <button id="schedule">Schedule</button>
         <button id="route">Route</button>
