--- a/presentation.html
+++ b/presentation.html
@@ -16,8 +16,8 @@
         <div class="image-frame">
             <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
-        <h1>Presentations</h1>
-        <h1>Some names of speakers</h1>
+        <br>
+        <h1>Presentations of speakers</h1>
         <button class="speaker" data-pdf="Pre-Test.pdf">Dmytro Seleba</button>
         <button class="speaker" data-pdf="my_resume_n.pdf">Andrii Zabolotnyi</button>
         <button class="speaker" data-pdf="Pre-Test.pdf">Oksana PrychepenskA</button>
