--- a/reg2.html
+++ b/reg2.html
@@ -16,7 +16,8 @@
         <div class="main-image-frame">
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
-        <h1>Dentist Event</h1>
+        <br>
+        <h1>Registration</h1>
         <form method="POST">
             <!-- ADD "REQUIRED TO EVERY FIELD" -->
             <input type="text" id="name" placeholder="Name" required> 
@@ -26,10 +27,13 @@
             <input type="text" id="city" placeholder="City" >
             <input type="text" id="school" placeholder="school" >
             <input type="text" id="position" placeholder="position">
-            <div class="button-container">
-                <button id="back">Back</button>
-                <button id="register">Register</button>
-            </div>
+            <button id="back">Back</button>
+            <button id="register">Register</button>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
         </form>
     </div>
 
