--- a/route.html
+++ b/route.html
@@ -17,21 +17,26 @@
         <div class="image-frame">
             <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
+        <br>
         <h1>Route</h1>
         <img src="images/r2.jpg" class="zoomable-image" id="contectimg">
         <img src="images/route2.png" class="zoomable-image" id="contectimg">
-        <img src="images/route3.jpg" class="zoomable-image" id="contectimg">        
+        <img src="images/route3.jpg" class="zoomable-image" id="contectimg"> 
         <img src="images/r3.png" class="zoomable-image" id="contectimg">
         <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <div class="button-container">
             <button id="back">Back</button>
             <button id="map">Map</button>
-        </div>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
     </div>
 
     <script>
         let back = document.getElementById("back");
         let map = document.getElementById("map");
+        let tg = window.Telegram.WebApp;
 
         back.addEventListener("click", async (event) => {
             window.location.href = "https://carrion626.github.io/home.html";
