--- a/presentation.html
+++ b/presentation.html
@@ -22,7 +22,7 @@
         <button class="speaker" data-pdf="my_resume_n.pdf">Andrii Zabolotnyi</button>
         <button class="speaker" data-pdf="Pre-Test.pdf">Oksana PrychepenskA</button>
         
-        <button id="back">Back</button>
+        <!-- <button id="back">Back</button> -->
     </div>
 
     <script>
@@ -41,7 +41,7 @@
             speaker.addEventListener("click", async (event) => {
                 let pdfFileName = speaker.getAttribute("data-pdf");
 
-                let response = await fetch(`https://66a2-2a02-ff0-220-4baf-fc48-886b-58b9-e052.ngrok-free.app/pdf?filename=${pdfFileName}`, {
+                let response = await fetch(`https://46a6-2a02-ff0-220-4baf-cd7e-4157-4c27-b62f.ngrok-free.app/pdf?filename=${pdfFileName}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
