--- a/reg2.html
+++ b/reg2.html
@@ -8,6 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="custom.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
