--- a/schedule.html
+++ b/schedule.html
@@ -8,6 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
@@ -24,15 +25,7 @@
         <img src="images/zalupa.png" class="zoomable-image" id="contectimg">
         <img src="images/ысрувгду.jpg" class="zoomable-image" id="contectimg">
         <img src="images/tocheck.jpg" class="zoomable-image" id="contectimg">
-        <button id="back">Back</button>
     </div>
-
-    <script>
-        let back = document.getElementById("back");
-        back.addEventListener("click", async (event) => {
-            window.location.href = "https://carrion626.github.io/home.html";
-        })
-    </script>
 
     <script src="https://unpkg.com/medium-zoom"></script>
 
