--- a/contacts.html
+++ b/contacts.html
@@ -8,6 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <style>
 
@@ -35,15 +36,6 @@
 
             
         </div>
-        <button id="back">Back</button>
-        
-
-    <script>
-        let back = document.getElementById("back");
-        back.addEventListener("click", async (event) => {
-            window.location.href = "https://carrion626.github.io/home.html";
-        })
-    </script>
 
 </body>
 </html>
