--- a/programm.html
+++ b/programm.html
@@ -8,6 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
 </head>
@@ -28,9 +29,7 @@
         <img src="images/prog2.jpg" class="zoomable-image" id="contectimg">
         <img src="images/prog3.jpg" class="zoomable-image" id="contectimg">        
         <img src="images/prog4.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/prog5.jpg" class="zoomable-image" id="contectimg">
-        
-        <button id="back">Back</button>
+        <img src="images/prog5.jpg" class="zoomable-image" id="contectimg">        
     </div>
 
     <!-- For "Programm", limiting <p> Up to 1000 chars -->
@@ -40,14 +39,7 @@
             programmText.textContent = programmText.textContent.substring(0, 1000) + '...';
         }
     </script>
-        
 
-    <script>
-        let back = document.getElementById("back");
-        back.addEventListener("click", async (event) => {
-            window.location.href = "https://carrion626.github.io/home.html";
-        })
-    </script>
 
     <script src="https://unpkg.com/medium-zoom"></script>
 
