--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('tps://685a-24-133-128-87.ngrok-free.app/submit_registration', {
+                let response = await fetch('https://685a-24-133-128-87.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
