--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         const image = document.getElementById('imagefirst');
         const previewDiv = document.getElementById('preview');
         const firstRegDiv = document.getElementById('first_reg');
-        tg.MainButton.text = "Back"; //изменяем текст кнопки 
+        tg.MainButton.text = "Next >>"; //изменяем текст кнопки 
         tg.MainButton.show()
         const registerButton = document.getElementById('register');
 
