--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="preview">
-        <img id="imagefirst" src="images/notlogo.jpg">
+        <img id="imagefirst" src="images/1.jpg">
 
     </div>
 
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const images = ['notlogo.jpg', 'check2.jpg', 'tocheck.jpg', 'ысрувгду.jpg', 'logo.jpg'];
+        const images = ['1.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg'];
         let currentIndex = 0;
         
 
