--- a/programm.html
+++ b/programm.html
@@ -25,11 +25,14 @@
             Aliquam at augue vel velit euismod faucibus non ut dui. Aenean sem libero, ultrices a est sed, efficitur vestibulum purus. Phasellus porttitor condimentum sapien, vel maximus dolor maximus in. Etiam eu velit a massa porttitor placerat. Morbi aliquet, magna ut malesuada fermentum, neque arcu tincidunt mauris, facilisis congue sem massa ac urna. Morbi vulputate tempor odio, ut gravida elit. Pellentesque pretium ex risus, eu fringilla leo molestie quis.            
             Aenean aliquet a erat et fermentum. Suspendisse libero sapien, ornare sit amet justo et, tempus malesuada tortor. Phasellus lobortis leo pellentesque quam consectetur laoreet. In dapibus vel enim eget commodo. Praesent molestie laoreet lobortis. Integer venenatis sed quam in volutpat. Quisque vel massa feugiat urna sagittis dapibus sit amet ac purus. Proin arcu ex, efficitur at lorem et, lobortis tincidunt ante. Donec efficitur tellus eget lacus suscipit, non volutpat sem varius. Duis venenatis convallis velit. Mauris maximus justo leo, at varius magna mollis ac. Maecenas lobortis imperdiet dui sit amet vestibulum. Phasellus gravida tellus est, sed mattis quam tincidunt et. Pellentesque gravida hendrerit imperdiet. Ut pretium purus non sapien rutrum aliquam.</p>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
-        <img src="images/prog1.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/prog2.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/prog3.jpg" class="zoomable-image" id="contectimg">        
-        <img src="images/prog4.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/prog5.jpg" class="zoomable-image" id="contectimg">        
+        
+        <div id="contectimg">
+            <img src="images/prog1.jpg" class="zoomable-image">
+            <img src="images/prog2.jpg" class="zoomable-image">
+            <img src="images/prog3.jpg" class="zoomable-image">        
+            <img src="images/prog4.jpg" class="zoomable-image">
+            <img src="images/prog5.jpg" class="zoomable-image">  
+        </div>      
     </div>
 
     <!-- For "Programm", limiting <p> Up to 1000 chars -->
