--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const images = ['1.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg'];
+        const images = ['1.jpg', '2.jpg', '3.jpg', 'r2.jpg', 'tocheck.jpg'];
         let currentIndex = 0;
         
 
