--- a/programm.html
+++ b/programm.html
@@ -28,11 +28,20 @@
         
         <div id="contectimg">
             <img src="images/prog1.jpg" class="zoomable-image">
+        </div> 
+        <div id="contectimg">
             <img src="images/prog2.jpg" class="zoomable-image">
-            <img src="images/prog3.jpg" class="zoomable-image">        
+        </div>
+        <div id="contectimg">
+            <img src="images/prog3.jpg" class="zoomable-image">
+        </div>   
+        <div id="contectimg">     
             <img src="images/prog4.jpg" class="zoomable-image">
-            <img src="images/prog5.jpg" class="zoomable-image">  
-        </div>      
+        </div>
+        <div id="contectimg">
+            <img src="images/prog5.jpg" class="zoomable-image">
+        </div>  
+             
     </div>
 
     <!-- For "Programm", limiting <p> Up to 1000 chars -->
