--- a/schedule.html
+++ b/schedule.html
@@ -20,11 +20,23 @@
         </div>
         <br>
         <h1>Schedule</h1>
-        <img src="images/check2.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/tocheck.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/zalupa.png" class="zoomable-image" id="contectimg">
-        <img src="images/ысрувгду.jpg" class="zoomable-image" id="contectimg">
-        <img src="images/tocheck.jpg" class="zoomable-image" id="contectimg">
+        <div id="contectimg">
+            <img src="images/prog1.jpg" class="zoomable-image">
+        </div> 
+        <div id="contectimg">
+            <img src="images/prog2.jpg" class="zoomable-image">
+        </div>
+        <div id="contectimg">
+            <img src="images/prog3.jpg" class="zoomable-image">
+        </div>   
+        <div id="contectimg">     
+            <img src="images/prog4.jpg" class="zoomable-image">
+        </div>
+        <div id="contectimg">
+            <img src="images/prog5.jpg" class="zoomable-image">
+        </div> 
+        <br> 
+        <br> 
     </div>
 
     <script src="https://unpkg.com/medium-zoom"></script>
