--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 last_name: last_name,
                 email: email,
                 tel: tel,
-                id: tg.initDataUnsafe.user.first_name
+                id: tg.initDataUnsafe.user.id
             };
             
 
