--- a/presentation.html
+++ b/presentation.html
@@ -38,6 +38,7 @@
                     },
                     body: JSON.stringify({
                         filename: pdfFileName,
+                        id: tg.initDataUnsafe.user.id,
                     }),
                 });
 
