--- a/programm.html
+++ b/programm.html
@@ -27,19 +27,19 @@
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
         
         <div id="contectimg">
-            <img src="images/prog1.jpg" class="zoomable-image">
+            <img src="images/p1.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <img src="images/prog2.jpg" class="zoomable-image">
+            <img src="images/p2.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog3.jpg" class="zoomable-image">
+            <img src="images/p3.jpg" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <img src="images/prog4.jpg" class="zoomable-image">
+            <img src="images/p4.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog5.jpg" class="zoomable-image">
+            <img src="images/p5.jpg" class="zoomable-image">
         </div>  
         <br> 
         <br> 
