--- a/route.html
+++ b/route.html
@@ -21,19 +21,19 @@
         <br>
         <h1>Route</h1>
         <div id="contectimg">
-            <img src="images/prog1.jpg" class="zoomable-image">
+            <img src="images/r1.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <img src="images/prog2.jpg" class="zoomable-image">
+            <img src="images/r2.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog3.jpg" class="zoomable-image">
+            <img src="images/r3.jpg" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <img src="images/prog4.jpg" class="zoomable-image">
+            <img src="images/r4.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog5.jpg" class="zoomable-image">
+            <img src="images/r5.jpg" class="zoomable-image">
         </div>  
         <br> 
             <button id="map">Map</button>
