--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="preview">
-        <img id="imagefirst" src="images/1.jpg">
+        <img id="imagefirst" src="images/pre1.jpg">
 
     </div>
 
@@ -41,7 +41,7 @@
     </div>
 
     <script>
-        const images = ['1.jpg', '2.jpg', '3.jpg', 'r2.jpg', 'tocheck.jpg'];
+        const images = ['prev1.jpg', 'prev2.jpg', 'prev3.jpg', '4prev.jpg', 'prev5.jpg'];
         let currentIndex = 0;
         
 
