--- a/schedule.html
+++ b/schedule.html
@@ -21,19 +21,19 @@
         <br>
         <h1>Schedule</h1>
         <div id="contectimg">
-            <img src="images/prog1.jpg" class="zoomable-image">
+            <img src="images/s1.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <img src="images/prog2.jpg" class="zoomable-image">
+            <img src="images/s2.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog3.jpg" class="zoomable-image">
+            <img src="images/s3.jpg" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <img src="images/prog4.jpg" class="zoomable-image">
+            <img src="images/s4.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog5.jpg" class="zoomable-image">
+            <img src="images/s5.jpg" class="zoomable-image">
         </div> 
         <br> 
         <br> 
