vhkv,mj,jh.,hj.

--- a/schedule.html
+++ b/schedule.html
@@ -21,20 +21,20 @@
         <br>
         <h1>Schedule</h1>
         <div id="contectimg">
-            <img src="images/s1.jpg" class="zoomable-image">
+            <img src="images/prog2.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <img src="images/s2.jpg" class="zoomable-image">
+            <img src="images/prog4.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/s3.jpg" class="zoomable-image">
+            <img src="images/check2.jpg" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <img src="images/s4.jpg" class="zoomable-image">
+            <img src="images/fhfhfh.jpeg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/s5.jpg" class="zoomable-image">
-        </div> 
+            <img src="images/prog2.jpg" class="zoomable-image">
+        </div>
         <br> 
         <br> 
     </div>
