--- a/schedule.html
+++ b/schedule.html
@@ -39,6 +39,42 @@
         <br> 
     </div>
 
+    <script>
+        const zoomImage = document.getElementById('zoomImage');
+        let initialDistance = 0;
+        let initialScale = 1;
+
+        zoomImage.addEventListener('touchstart', function (e) {
+            if (e.touches.length === 2) {
+                initialDistance = Math.hypot(
+                    e.touches[0].clientX - e.touches[1].clientX,
+                    e.touches[0].clientY - e.touches[1].clientY
+                );
+
+                initialScale = parseFloat(getComputedStyle(zoomImage).transform.split(',')[3]);
+            }
+        });
+
+        zoomImage.addEventListener('touchmove', function (e) {
+            if (e.touches.length === 2) {
+                e.preventDefault(); // Prevent default touch behavior
+
+                const currentDistance = Math.hypot(
+                    e.touches[0].clientX - e.touches[1].clientX,
+                    e.touches[0].clientY - e.touches[1].clientY
+                );
+
+                const scale = currentDistance / initialDistance * initialScale;
+
+                zoomImage.style.transform = `scale(${scale})`;
+            }
+        });
+
+        zoomImage.addEventListener('touchend', function (e) {
+            zoomImage.style.transition = 'transform 0.5s ease'; // Apply smooth transition
+        });
+    </script>
+
 
 </body>
 </html>
