--- a/schedule.html
+++ b/schedule.html
@@ -21,19 +21,19 @@
         <br>
         <h1>Schedule</h1>
         <div id="contectimg">
-            <img src="images/prog2.jpg" class="zoomable-image">
+            <img id="zoomImage" src="images/prog2.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <img src="images/prog4.jpg" class="zoomable-image">
+            <img id="zoomImage" src="images/prog4.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/check2.jpg" class="zoomable-image">
+            <img id="zoomImage" src="images/check2.jpg" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <img src="images/fhfhfh.jpeg" class="zoomable-image">
+            <img id="zoomImage" src="images/fhfhfh.jpeg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <img src="images/prog2.jpg" class="zoomable-image">
+            <img id="zoomImage" src="images/prog2.jpg" class="zoomable-image">
         </div>
         <br> 
         <br> 
