--- a/schedule.html
+++ b/schedule.html
@@ -43,6 +43,7 @@
         const zoomImage = document.getElementById('zoomImage');
         let initialDistance = 0;
         let initialScale = 1;
+        let currentScale = 1;
 
         zoomImage.addEventListener('touchstart', function (e) {
             if (e.touches.length === 2) {
@@ -51,7 +52,7 @@
                     e.touches[0].clientY - e.touches[1].clientY
                 );
 
-                initialScale = parseFloat(getComputedStyle(zoomImage).transform.split(',')[3]);
+                initialScale = currentScale;
             }
         });
 
@@ -64,9 +65,12 @@
                     e.touches[0].clientY - e.touches[1].clientY
                 );
 
-                const scale = currentDistance / initialDistance * initialScale;
+                const scale = (currentDistance / initialDistance) * initialScale;
 
-                zoomImage.style.transform = `scale(${scale})`;
+                // Limit the scale to a certain range, e.g., 0.5 to 3
+                currentScale = Math.min(Math.max(scale, 0.5), 3);
+
+                zoomImage.style.transform = `scale(${currentScale})`;
             }
         });
 
