--- a/schedule.html
+++ b/schedule.html
@@ -11,70 +11,58 @@
     <script src="custom.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
+    <style>
+        /* Add your custom styles here */
+        .js-resize-sensor, .t-CardsRegion, .a-CardView-media, .a-TMV-w-scroll {
+            overflow: visible!important;
+        }
+    </style>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            // Function to apply pinch zoom
             const pinchZoom = (imageElement) => {
-  let imageElementScale = 1;
+                let imageElementScale = 1;
+                let start = {};
 
-  let start = {};
+                const distance = (event) => {
+                    return Math.hypot(event.touches[0].pageX - event.touches[1].pageX, event.touches[0].pageY - event.touches[1].pageY);
+                };
 
-  // Calculate distance between two fingers
-  const distance = (event) => {
-        return Math.hypot(event.touches[0].pageX - event.touches[1].pageX, event.touches[0].pageY - event.touches[1].pageY);
-    };
+                imageElement.addEventListener('touchstart', (event) => {
+                    if (event.touches.length === 2) {
+                        event.preventDefault();
+                        start.x = (event.touches[0].pageX + event.touches[1].pageX) / 2;
+                        start.y = (event.touches[0].pageY + event.touches[1].pageY) / 2;
+                        start.distance = distance(event);
+                    }
+                });
 
-    imageElement.addEventListener('touchstart', (event) => {
-        console.log('touchstart', event);
-        if (event.touches.length === 2) {
-        event.preventDefault(); // Prevent page scroll
+                imageElement.addEventListener('touchmove', (event) => {
+                    if (event.touches.length === 2) {
+                        event.preventDefault();
+                        let scale;
+                        if (event.scale) {
+                            scale = event.scale;
+                        } else {
+                            const deltaDistance = distance(event);
+                            scale = deltaDistance / start.distance;
+                        }
+                        imageElementScale = Math.min(Math.max(1, scale), 4);
+                        const deltaX = (((event.touches[0].pageX + event.touches[1].pageX) / 2) - start.x) * 2;
+                        const deltaY = (((event.touches[0].pageY + event.touches[1].pageY) / 2) - start.y) * 2;
+                        const transform = `translate3d(${deltaX}px, ${deltaY}px, 0) scale(${imageElementScale})`;
+                        imageElement.style.transform = transform;
+                        imageElement.style.WebkitTransform = transform;
+                        imageElement.style.zIndex = "9999";
+                    }
+                });
 
-        // Calculate where the fingers have started on the X and Y axis
-        start.x = (event.touches[0].pageX + event.touches[1].pageX) / 2;
-        start.y = (event.touches[0].pageY + event.touches[1].pageY) / 2;
-        start.distance = distance(event);
-        }
-    });
+                imageElement.addEventListener('touchend', (event) => {
+                    imageElement.style.transform = "";
+                    imageElement.style.WebkitTransform = "";
+                    imageElement.style.zIndex = "";
+                });
+            };
 
-    imageElement.addEventListener('touchmove', (event) => {
-        console.log('touchmove', event);
-        if (event.touches.length === 2) {
-        event.preventDefault(); // Prevent page scroll
-        let scale;
-
-        // Safari provides event.scale as two fingers move on the screen
-        // For other browsers just calculate the scale manually
-        if (event.scale) {
-            scale = event.scale;
-        } else {
-            const deltaDistance = distance(event);
-            scale = deltaDistance / start.distance;
-        }
-
-        imageElementScale = Math.min(Math.max(1, scale), 4);
-
-        // Calculate how much the fingers have moved on the X and Y axis
-        const deltaX = (((event.touches[0].pageX + event.touches[1].pageX) / 2) - start.x) * 2; // x2 for accelarated movement
-        const deltaY = (((event.touches[0].pageY + event.touches[1].pageY) / 2) - start.y) * 2; // x2 for accelarated movement
-
-        // Transform the image to make it grow and move with fingers
-        const transform = `translate3d(${deltaX}px, ${deltaY}px, 0) scale(${imageElementScale})`;
-        imageElement.style.transform = transform;
-        imageElement.style.WebkitTransform = transform;
-        imageElement.style.zIndex = "9999";
-        }
-    });
-
-    imageElement.addEventListener('touchend', (event) => {
-        console.log('touchend', event);
-        // Reset image to it's original format
-        imageElement.style.transform = "";
-        imageElement.style.WebkitTransform = "";
-        imageElement.style.zIndex = "";
-    });
-    }
-
-            // Get all the zoomable images and apply pinch zoom
             const zoomableImages = document.querySelectorAll('.zoomable-image');
             zoomableImages.forEach(image => {
                 pinchZoom(image);
@@ -83,7 +71,6 @@
     </script>
 </head>
 <body>
-
     <div id="sch">
         <div class="image-frame">
             <img src="images/notlogo.jpg" alt="Huyatina Image">
