--- a/schedule.html
+++ b/schedule.html
@@ -78,19 +78,29 @@
         <br>
         <h1>Schedule</h1>
         <div id="contectimg">
-            <img id="zoomImage1" src="images/prog2.jpg" class="zoomable-image">
+            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
+                <img id="zoomImage1" src="images/prog2.jpg" class="zoomable-image">
+            </div>
         </div> 
         <div id="contectimg">
-            <img id="zoomImage2" src="images/prog4.jpg" class="zoomable-image">
+            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
+                <img id="zoomImage2" src="images/prog4.jpg" class="zoomable-image">
+            </div>
         </div>
         <div id="contectimg">
-            <img id="zoomImage3" src="images/check2.jpg" class="zoomable-image">
+            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
+                <img id="zoomImage3" src="images/check2.jpg" class="zoomable-image">
+            </div>
         </div>   
         <div id="contectimg">     
-            <img id="zoomImage4" src="images/fhfhfh.jpeg" class="zoomable-image">
+            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
+                <img id="zoomImage4" src="images/fhfhfh.jpeg" class="zoomable-image">
+            </div>
         </div>
         <div id="contectimg">
-            <img id="zoomImage5" src="images/prog2.jpg" class="zoomable-image">
+            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
+                <img id="zoomImage5" src="images/prog2.jpg" class="zoomable-image">
+            </div>
         </div>
         <br> 
         <br> 
