--- a/schedule.html
+++ b/schedule.html
@@ -20,54 +20,65 @@
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const pinchZoom = (imageElement) => {
-                let imageElementScale = 1;
-                let start = {};
+            let imageElementScale = 1;
+            let start = {};
+            let lastDeltaX = 0;
+            let lastDeltaY = 0;
 
-                const distance = (event) => {
-                    return Math.hypot(event.touches[0].pageX - event.touches[1].pageX, event.touches[0].pageY - event.touches[1].pageY);
-                };
-
-                imageElement.addEventListener('touchstart', (event) => {
-                    if (event.touches.length === 2) {
-                        event.preventDefault();
-                        start.x = (event.touches[0].pageX + event.touches[1].pageX) / 2;
-                        start.y = (event.touches[0].pageY + event.touches[1].pageY) / 2;
-                        start.distance = distance(event);
-                    }
-                });
-
-                imageElement.addEventListener('touchmove', (event) => {
-                    if (event.touches.length === 2) {
-                        event.preventDefault();
-                        let scale;
-                        if (event.scale) {
-                            scale = event.scale;
-                        } else {
-                            const deltaDistance = distance(event);
-                            scale = deltaDistance / start.distance;
-                        }
-                        imageElementScale = Math.min(Math.max(1, scale), 4);
-                        const deltaX = (((event.touches[0].pageX + event.touches[1].pageX) / 2) - start.x) * 2;
-                        const deltaY = (((event.touches[0].pageY + event.touches[1].pageY) / 2) - start.y) * 2;
-                        const transform = `translate3d(${deltaX}px, ${deltaY}px, 0) scale(${imageElementScale})`;
-                        imageElement.style.transform = transform;
-                        imageElement.style.WebkitTransform = transform;
-                        imageElement.style.zIndex = "9999";
-                    }
-                });
-
-                imageElement.addEventListener('touchend', (event) => {
-                    imageElement.style.transform = "";
-                    imageElement.style.WebkitTransform = "";
-                    imageElement.style.zIndex = "";
-                });
+            const distance = (event) => {
+                return Math.hypot(event.touches[0].pageX - event.touches[1].pageX, event.touches[0].pageY - event.touches[1].pageY);
             };
 
-            const zoomableImages = document.querySelectorAll('.zoomable-image');
-            zoomableImages.forEach(image => {
-                pinchZoom(image);
+            const updateTransform = () => {
+                const transform = `translate3d(${lastDeltaX}px, ${lastDeltaY}px, 0) scale(${imageElementScale})`;
+                imageElement.style.transform = transform;
+                imageElement.style.WebkitTransform = transform;
+                imageElement.style.zIndex = "9999";
+            };
+
+            imageElement.addEventListener('touchstart', (event) => {
+                if (event.touches.length === 2) {
+                    event.preventDefault();
+                    start.x = (event.touches[0].pageX + event.touches[1].pageX) / 2;
+                    start.y = (event.touches[0].pageY + event.touches[1].pageY) / 2;
+                    start.distance = distance(event);
+                }
             });
-        });
+
+            imageElement.addEventListener('touchmove', (event) => {
+                if (event.touches.length === 2) {
+                    event.preventDefault();
+                    let scale;
+                    if (event.scale) {
+                        scale = event.scale;
+                    } else {
+                        const deltaDistance = distance(event);
+                        scale = deltaDistance / start.distance;
+                    }
+                    imageElementScale = Math.min(Math.max(1, scale), 4);
+
+                    const deltaX = (((event.touches[0].pageX + event.touches[1].pageX) / 2) - start.x) * 2;
+                    const deltaY = (((event.touches[0].pageY + event.touches[1].pageY) / 2) - start.y) * 2;
+
+                    lastDeltaX = deltaX;
+                    lastDeltaY = deltaY;
+
+                    // Update the transform using requestAnimationFrame
+                    requestAnimationFrame(updateTransform);
+                }
+            });
+
+            imageElement.addEventListener('touchend', (event) => {
+                // Reset image to its original format
+                imageElement.style.transform = "";
+                imageElement.style.WebkitTransform = "";
+                imageElement.style.zIndex = "";
+                lastDeltaX = 0;
+                lastDeltaY = 0;
+            });
+        };
+    });
+
     </script>
 </head>
 <body>
@@ -78,29 +89,19 @@
         <br>
         <h1>Schedule</h1>
         <div id="contectimg">
-            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
-                <img id="zoomImage1" src="images/prog2.jpg" class="zoomable-image">
-            </div>
+            <img id="zoomImage1" src="images/prog2.jpg" class="zoomable-image">
         </div> 
         <div id="contectimg">
-            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
-                <img id="zoomImage2" src="images/prog4.jpg" class="zoomable-image">
-            </div>
+            <img id="zoomImage2" src="images/prog4.jpg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
-                <img id="zoomImage3" src="images/check2.jpg" class="zoomable-image">
-            </div>
+            <img id="zoomImage3" src="images/check2.jpg" class="zoomable-image">
         </div>   
         <div id="contectimg">     
-            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
-                <img id="zoomImage4" src="images/fhfhfh.jpeg" class="zoomable-image">
-            </div>
+            <img id="zoomImage4" src="images/fhfhfh.jpeg" class="zoomable-image">
         </div>
         <div id="contectimg">
-            <div class="js-resize-sensor t-CardsRegion a-CardView-media a-TMV-w-scroll">
-                <img id="zoomImage5" src="images/prog2.jpg" class="zoomable-image">
-            </div>
+            <img id="zoomImage5" src="images/prog2.jpg" class="zoomable-image">
         </div>
         <br> 
         <br> 
